Fix z-index on feedback panel so it doesn't slide in behind front page feature pages (fixes #7855)
svn commit r65400

--- a/www/styles/store-feedback-panel.css
+++ b/www/styles/store-feedback-panel.css
@@ -7,7 +7,7 @@ a.store-feedback-panel-title {
 .store-feedback-panel-container {
 	width: 440px;
 	height: 0;
-	z-index: 1000;
+	z-index: 1010;
 	position: absolute;
 	overflow: hidden;
 	background: #fff;
